--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
         <div class="hero">
             <div class="content">
-                <h1>Beautifully Crafted Web Experiences</h1>
-                <div class="meet">
+                <h1 class="stagger1">Beautifully Crafted Web Experiences</h1>
+                <div class="meet stagger1">
                     <span>&#10225;</span>
                     <p>Meet Matjaž Bratina</p>
                 </div>
@@ -137,5 +137,69 @@
             </div>
         </section>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js" integrity="sha512-Q+G390ZU2qKo+e4q+kVcJknwfGjKJOdyu5mVMcR95NqL6XaF4lY4nsSvIVB3NDP54ACsS9rqhE1DVqgpApl//Q==" crossorigin="anonymous"></script>
+
+        <script>
+            gsap.registerPlugin(ScrollTrigger);
+            var tl = gsap.timeline();
+
+            tl.from('.content', {   // move content section down and fade it in
+                y: '-30%',
+                opacity: '0',
+                duration: 1.5,
+                ease: Power4.easeOut
+            });
+
+            tl.from('.stagger1', { // all elements with stagger1 class will come into view one after another with a delay (specified with the stagger parameter)
+                opacity: 0,
+                y: -50,
+                stagger: 0.3,
+                duration: 2,
+                ease: Power4.easeOut
+            },
+            "-=1.5" // offest something
+            );
+
+            tl.from('.hero-design', {
+                opacity: 0,
+                y: 50,
+                ease: Power4.easeOut,
+                duration: 2
+            },
+            "-=1.85");
+
+            gsap.from(".square-anim", {
+                stagger: 0.2,
+                scale: 0.1,
+                duration: 1,
+                ease: Back.easeOut.config(1.7)
+            })
+
+
+            // scroll based animations
+
+            gsap.from(".transition2", {
+                scrollTrigger: {
+                    trigger: '.transition2',    // any element with this css class, when the top of the element reaches the bottom of the scroll bar it will animate something
+                    start: "top bottom"
+                },
+                y: 50,
+                opacity: 0,
+                duration: 1.2,
+                stagger: 0.3
+            });
+
+            gsap.from(".transition3", {
+                scrollTrigger: {
+                    trigger: '.transition3',    // any element with this css class, when the top of the element reaches the center of the scroll bar it will animate something
+                    start: "top center"
+                },
+                y: 50,
+                opacity: 0,
+                duration: 1.2,
+                stagger: 0.6
+            });
+        </script>
     </body>
 </html>
